--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "autoload": {
         "psr-4": {
             "BlankPhp\\": "src"
-        }
+        },
+        "files": [
+            "src/helpers/helper.php"
+        ]
     }
 }
