--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,14 @@
             "src/helpers/helper.php"
         ]
     },
-     "prefer-stable": true
+     "prefer-stable": true,
+    "require": {
+        "psr/log": "^1.1"
+    },
+    "repositories": {
+        "blankqwq": {
+            "type": "path",
+            "url": "/home/vagrant/chart/framework"
+        }
+    }
 }
