--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
      "prefer-stable": true,
     "require": {
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "predis/predis": "^1.1"
     },
     "repositories": {
         "blankqwq": {
