--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-.idea
-*.DS_Store
 /vendor
-/coverage
-sftp-config.json
+composer.phar
 composer.lock
-.subsplit
-.php_cs.cache
+.DS_Store
+Thumbs.db
+/.idea
+/.vscode
