--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
     "require": {
         "psr/log": "^1.1",
         "predis/predis": "^1.1",
-        "ext-curl": "*"
+        "ext-curl": "*",
     }
 }
