--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "blankphp/framework",
+    "name": "blankqwq/framework",
     "description": "a mvc framework",
     "license": "MIT",
     "authors": [
@@ -21,6 +21,6 @@
     "require": {
         "psr/log": "^1.1",
         "predis/predis": "^1.1",
-        "ext-curl": "*",
+        "ext-curl": "*"
     }
 }
