【开发】修复Session组件异常

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-gd": "*",
-        "ext-openssl": "*"
+        "ext-openssl": "*",
+        "ext-mbstring": "*"
     }
 }
