--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,8 +9,8 @@
          processIsolation="false"
          stopOnFailure="false">
     <testsuites>
-        <testsuite name="Application Test Suite">
-            <directory suffix="TestUnit.php">./tests/</directory>
+        <testsuite name="Container Test Suite">
+            <directory suffix="Test.php">./tests</directory>
         </testsuite>
     </testsuites>
     <filter>
