--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,6 @@
 name: Test
 
-on:
-    push:
-        - '*'
-    pull_request:
-        - '*'
+on: [push,pull_request]
 
 jobs:
     build:
@@ -25,5 +21,5 @@ jobs:
             - name: Install dependencies
               run: composer install --prefer-dist --no-progress
             - name: Run phpunit
-              run: vendor/bin/phpunit
+              run: composer test
 
