--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "predis/predis": "^1.1",
         "ext-curl": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.2"
+    },
     "scripts": {
         "test" : "vendor/bin/phpunit"
     }
