--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
+        "phpunit/phpunit": "^6.2 | ^7 | ^8 | ^9"
     },
     "scripts": {
         "test" : "vendor/bin/phpunit"
