--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "psr/log": "^1.1",
         "predis/predis": "^1.1",
         "ext-curl": "*",
-        "monolog/monolog": "^2.3"
+        "monolog/monolog": "^2.3",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2 | ^7 | ^8 | ^9",
@@ -34,7 +35,8 @@
         "hooks": {
             "pre-commit": [
                 "echo committing as $(git config user.name)",
-                "composer fix-style"
+                "composer fix-style",
+                "composer test"
             ]
         }
     },
