update some interface return type

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
             "pre-commit": [
                 "composer fix-style",
                 "composer test",
+                "git add .",
                 "echo committing as $(git config user.name)"
             ]
         }
