--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,4 +4,7 @@ on:
     push:
         tags:
             - '*'
-
+jobs:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v2
