--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require-dev": {
         "phpunit/phpunit": "^6.2 | ^7 | ^8 | ^9",
         "phpstan/phpstan": "^1.3",
-        "friendsofphp/php-cs-fixer": "^3.5",
+        "friendsofphp/php-cs-fixer": "^3 | ^2",
         "brainmaestro/composer-git-hooks": "^2.8"
     },
     "extra": {
