add multi version to lint

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
         tags:
             - '*'
 jobs:
-    runs-on: ubuntu-latest
-    steps:
-        - uses: actions/checkout@v2
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
