--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "predis/predis": "^1.1",
         "ext-curl": "*",
         "monolog/monolog": "^2.3",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2 | ^7 | ^8 | ^9",
