--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "blankqwq/framework",
+    "name": "blankphp/framework",
     "description": "a mvc framework",
     "license": "MIT",
     "authors": [
